--- a/windows-container-samples/Insider/Python/Dockerfile
+++ b/windows-container-samples/Insider/Python/Dockerfile
@@ -5,9 +5,11 @@ FROM microsoft/nanoserver-insider-powershell AS installer-env
 
 SHELL ["powershell", "-Command", "$ErrorActionPreference = 'SilentlyContinue';"]
 
-RUN Invoke-WebRequest -Uri https://www.python.org/ftp/python/3.6.2/python-3.6.2rc2-embed-amd64.zip -Outfile C:\Users\Public\python.zip;`
-    Expand-Archive C:\Users\Public\python.zip -DestionationPath C:\Users\Public\python; `
-    Remove-Item -Force C:\Users\Public\python.zip
+RUN Invoke-WebRequest -Uri https://www.python.org/ftp/python/3.6.2/python-3.6.2rc2-embed-amd64.zip -Outfile C:\Users\Public\python.zip
+
+RUN Expand-Archive C:\Users\Public\python.zip -DestionationPath C:\Users\Public\python
+
+RUN Remove-Item -Force C:\Users\Public\python.zip
 
 #Runtime image 
 FROM microsoft/nanoserver-insider
