--- a/windows-container-samples/Insider/Python/Dockerfile
+++ b/windows-container-samples/Insider/Python/Dockerfile
@@ -7,7 +7,7 @@ SHELL ["powershell", "-Command", "$ErrorActionPreference = 'SilentlyContinue';"]
 
 RUN Invoke-WebRequest -Uri https://www.python.org/ftp/python/3.6.2/python-3.6.2rc2-embed-amd64.zip -Outfile C:\Users\Public\python.zip
 
-RUN Expand-Archive C:\Users\Public\python.zip -DestionationPath C:\Users\Public\python
+RUN Expand-Archive C:\Users\Public\python.zip -DestinationPath C:\Users\Public\python
 
 RUN Remove-Item -Force C:\Users\Public\python.zip
 
